--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
                 <li class="nav-item">
                     <a class="nav-link text-white" href="Gallary.html">Gallery</a>
                 </li>
+<li class="nav-item">
+                    <a class="nav-link text-white" href="TodosList.html">Todo</a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link text-white" href="">ContectUs</a>
                 </li>
