--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
                 <li class="nav-item">
                     <a class="nav-link text-white" href="Gallary.html">Gallery</a>
                 </li>
-<li class="nav-item">
+ <li class="nav-item">
                     <a class="nav-link text-white" href="TodosList.html">Todo</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="">ContectUs</a>
+                    <a class="nav-link text-white" href="">ContactUs</a>
                 </li>
             </ul>
         </div>
